// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="ds-card"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ds-card__icon"
  >
    <svg
      className=""
      height={16}
      viewBox="0 0 7 11"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.8 5.4l-5.4 5.4L0 9.4l4-4-4-4L1.4 0"
        fill="#d8d8d8"
        fillRule="nonzero"
      />
    </svg>
  </div>
  <div
    className="ds-card__label"
  >
    Link
  </div>
  <div
    className="ds-card__value"
  >
    Test Link
  </div>
</button>
`;

exports[`renders correctly with add prop 1`] = `
<button
  className="ds-card ds-card--add"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ds-card__icon"
  >
    <svg
      className=""
      height={16}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm4 9H9v3H7V9H4V7h3V4h2v3h3v2z"
        fill="#d8d8d8"
        fillRule="nonzero"
      />
    </svg>
  </div>
  <div
    className="ds-card__label"
  >
    Link
  </div>
  <div
    className="ds-card__value"
  >
    None
  </div>
</button>
`;
